--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Videal LLC",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.1",
     "express": "^4.14.1",
     "nodejs-angelco-database": "git+https://github.com/videal/nodejs-angelco-database.git",
     "request": "^2.74.0",
